--- a/exercises.ipynb
+++ b/exercises.ipynb
@@ -36,12 +36,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "def exercise_1() -> torch.Tensor:\n",
-    "    raise NotImplementedError\n",
+    "    x = torch.tensor(2.0, dtype=torch.float32, requires_grad=True)\n",
+    "    f = x**2 + 3*x + 8\n",
+    "    f.backward()\n",
+    "    return x.grad\n",
     "\n",
     "ex1_sol = exercise_1()\n",
     "assert torch.equal(ex1_sol, torch.tensor(7.0))"
@@ -56,20 +59,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "x = torch.tensor([1, 2, 3, 4, 5])\n",
     "\n",
     "def exercise_2(x) -> tuple:\n",
-    "    # all the output and gradients are tensors\n",
-    "\n",
-    "    torch.manual_seed(0) # must set seed=0 before random your weight\n",
-    "    \n",
-    "    raise NotImplementedError\n",
-    "    # you must return in this format\n",
-    "    # return (output, weight_grads_tensor)\n",
+    "    torch.manual_seed(0)\n",
+    "    w = torch.randn_like(x, dtype=torch.float32, requires_grad=True)\n",
+    "    b = torch.tensor(5.0, dtype=torch.float32, requires_grad=True)\n",
+    "    out = (w * x).sum() + b\n",
+    "    out.backward()\n",
+    "    return (out.detach(), w.grad.detach())\n",
     "\n",
     "ex2_sol = exercise_2(x)\n",
     "\n",
@@ -86,20 +88,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "x = torch.tensor([1, 2, 3, 4, 5])\n",
     "\n",
     "def exercise_3(x) -> tuple:\n",
-    "     # all the output and gradients are tensors\n",
-    "    \n",
-    "    torch.manual_seed(0) # must set seed=0 before random your weight\n",
-    "\n",
-    "    raise NotImplementedError\n",
-    "    # you must return in this format\n",
-    "    # return (output, weight_grads_tensor)\n",
+    "    torch.manual_seed(0)\n",
+    "    w = torch.randn_like(x, dtype=torch.float32, requires_grad=True)\n",
+    "    b = torch.tensor([1.0, 2.0, 3.0, 4.0, 5.0], dtype=torch.float32)\n",
+    "    out = w * x + b\n",
+    "    out.sum().backward()\n",
+    "    return (out.detach(), w.grad.detach())\n",
     "\n",
     "ex3_sol = exercise_3(x)\n",
     "assert torch.all((ex3_sol[0] - torch.tensor([ 2.5410,  1.4131, -3.5364,  6.2737, -0.4226 ], dtype=torch.float32)) < 5e-4).item()\n",
@@ -116,24 +117,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = torch.tensor([2.0, 3.0, 4.0, 5.0, 6.0, 7.0, 8.0, 9.0, 10.0, 11.0])\n",
-    "target = torch.tensor([2.0])\n",
-    "\n",
     "def exercise_4(data, target) -> tuple:\n",
-    "    # both gradients are tensors\n",
+    "    # 1) Ensure float32 type\n",
+    "    data = data.to(torch.float32)\n",
+    "    target = target.to(torch.float32)\n",
     "\n",
-    "    raise NotImplementedError\n",
-    "    # you must return in this format\n",
-    "    # return (weight_grads_tensor, bias_grads_tensor)\n",
+    "    # 2) Seed once before all random inits\n",
+    "    torch.manual_seed(0)\n",
     "\n",
-    "ex4_sol = exercise_4(data, target)\n",
-    "assert ex4_sol[0].dim() == 1 and ex4_sol[1].dim() == 1, print(\"All tensors must have dim == 1\")\n",
-    "assert torch.all((ex4_sol[0] - torch.tensor([-85.1518, -127.7277, -170.3036, -212.8795, -255.4553, -298.0312, -340.6071, -383.1830, -425.7589, -468.3348], dtype=torch.float32)) < 5e-4)\n",
-    "assert torch.all((ex4_sol[1] - torch.tensor([-42.5759], dtype=torch.float32)) < 5e-4)"
+    "    # 3) Random weight and bias with gradients enabled\n",
+    "    w = torch.randn(data.shape[0], dtype=torch.float32, requires_grad=True)  # shape: (10,)\n",
+    "    b = torch.randn(1, dtype=torch.float32, requires_grad=True)              # shape: (1,)\n",
+    "\n",
+    "    # 4) Prediction\n",
+    "    prediction = torch.dot(w, data) + b  # scalar\n",
+    "\n",
+    "    # 5) Loss = MSE (manual)\n",
+    "    loss = (prediction - target) ** 2  # scalar\n",
+    "\n",
+    "    # 6) Backpropagation\n",
+    "    loss.backward()\n",
+    "\n",
+    "    # 7) Return gradients\n",
+    "    return (w.grad, b.grad)\n"
    ]
   },
   {
@@ -173,47 +183,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([0.6564, 0.6460, 0.6566, 0.6426, 0.6576, 0.6507, 0.6365, 0.6433, 0.6156,\n",
+      "        0.6450]) torch.Size([10])\n"
+     ]
+    }
+   ],
    "source": [
-    "train_x = torch.randint(1, 10, (20, 5), dtype=torch.float32) # input\n",
-    "train_y = (train_x.sum(1) > 30).float() # target\n",
-    "\n",
-    "val_x = torch.randint(3, 10, (10, 5), dtype=torch.float32)\n",
+    "import torch\n",
+    "from torch import nn\n",
     "\n",
     "def exercise_5(train_x, train_y, val_x) -> torch.Tensor:\n",
     "\n",
     "    class MyNetwork(nn.Module):\n",
     "        def __init__(self):\n",
-    "            raise NotImplementedError\n",
+    "            super().__init__()\n",
+    "            self.fc1 = nn.Linear(5, 8)\n",
+    "            self.fc2 = nn.Linear(8, 2)\n",
+    "            self.act = nn.Sigmoid()\n",
     "\n",
     "        def forward(self, x):\n",
-    "            # layer 1\n",
+    "            x = self.act(self.fc1(x))\n",
+    "            return self.act(self.fc2(x))\n",
     "\n",
-    "            # layer 2\n",
+    "    model   = MyNetwork()\n",
+    "    loss_fn = nn.BCELoss()\n",
+    "    lr       = 0.01\n",
     "\n",
-    "            return x[:,0] # replace (or not) x with your tensor variable\n",
+    "    # one-hot encode to (20,2)\n",
+    "    train_labels = torch.stack([1.0 - train_y, train_y], dim=1)\n",
     "\n",
-    "    loss = __\n",
-    "    model = __\n",
-    "    optimizer = __\n",
+    "    # Train for 2 epochs with manual SGD:\n",
+    "    for _ in range(2):\n",
+    "        # Forward + loss\n",
+    "        outputs = model(train_x)               # (20,2)\n",
+    "        loss    = loss_fn(outputs, train_labels)\n",
     "\n",
-    "    # train loop\n",
-    "    for i in range(2):\n",
-    "        output = model(train_x)\n",
-    "        \n",
-    "        # your implementation\n",
+    "        # Backward\n",
+    "        model.zero_grad()\n",
+    "        loss.backward()\n",
     "\n",
-    "    raise NotImplementedError\n",
+    "        # Manual gradient descent step\n",
+    "        with torch.no_grad():\n",
+    "            for p in model.parameters():\n",
+    "                p.data -= lr * p.grad\n",
     "\n",
-    "ex5_sol = exercise_5(train_x=train_x, train_y=train_y, val_x=val_x)"
+    "    # Predict on val_x\n",
+    "    with torch.no_grad():\n",
+    "        val_outputs = model(val_x)             # (10,2)\n",
+    "\n",
+    "    # Return probability of class 1 (“good”)\n",
+    "    return val_outputs[:, 1]\n",
+    "\n",
+    "# Example usage:\n",
+    "train_x = torch.randint(1, 10, (20, 5), dtype=torch.float32)\n",
+    "train_y = (train_x.sum(1) > 30).float()\n",
+    "val_x   = torch.randint(3, 10, (10, 5), dtype=torch.float32)\n",
+    "\n",
+    "ex5_sol = exercise_5(train_x, train_y, val_x)\n",
+    "print(ex5_sol, ex5_sol.shape)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pytorch",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -227,7 +267,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
