--- a/exercises.ipynb
+++ b/exercises.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,6 +45,7 @@
     "    f = x**2 + 3*x + 8\n",
     "    f.backward()\n",
     "    return x.grad\n",
+    "    \n",
     "\n",
     "ex1_sol = exercise_1()\n",
     "assert torch.equal(ex1_sol, torch.tensor(7.0))"
@@ -59,19 +60,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "x = torch.tensor([1, 2, 3, 4, 5])\n",
     "\n",
     "def exercise_2(x) -> tuple:\n",
-    "    torch.manual_seed(0)\n",
-    "    w = torch.randn_like(x, dtype=torch.float32, requires_grad=True)\n",
-    "    b = torch.tensor(5.0, dtype=torch.float32, requires_grad=True)\n",
-    "    out = (w * x).sum() + b\n",
-    "    out.backward()\n",
-    "    return (out.detach(), w.grad.detach())\n",
+    "    # all the output and gradients are tensors\n",
+    "\n",
+    "    torch.manual_seed(0) # must set seed=0 before random your weight\n",
+    "    x = x.to(torch.float32)\n",
+    "    w = torch.randn(x.size(0), dtype=torch.float32, requires_grad=True)\n",
+    "    b = 5.0\n",
+    "    output = torch.dot(w, x) + b\n",
+    "    output.backward()\n",
+    "    return (output, w.grad)\n",
+    "    # you must return in this format\n",
+    "    # return (output, weight_grads_tensor)\n",
     "\n",
     "ex2_sol = exercise_2(x)\n",
     "\n",
@@ -88,19 +94,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "x = torch.tensor([1, 2, 3, 4, 5])\n",
     "\n",
     "def exercise_3(x) -> tuple:\n",
-    "    torch.manual_seed(0)\n",
-    "    w = torch.randn_like(x, dtype=torch.float32, requires_grad=True)\n",
-    "    b = torch.tensor([1.0, 2.0, 3.0, 4.0, 5.0], dtype=torch.float32)\n",
-    "    out = w * x + b\n",
-    "    out.sum().backward()\n",
-    "    return (out.detach(), w.grad.detach())\n",
+    "     # all the output and gradients are tensors\n",
+    "    \n",
+    "    torch.manual_seed(0) # must set seed=0 before random your weight\n",
+    "\n",
+    "    x = x.to(torch.float32)\n",
+    "    w = torch.randn(x.size(0), dtype=torch.float32, requires_grad=True)\n",
+    "    b = torch.arange(1.0, x.size(0) + 1, dtype=torch.float32)\n",
+    "    y = w * x + b\n",
+    "    y.backward(torch.ones_like(y))\n",
+    "\n",
+    "    return (y, w.grad)\n",
+    "    # you must return in this format\n",
+    "    # return (output, weight_grads_tensor)\n",
     "\n",
     "ex3_sol = exercise_3(x)\n",
     "assert torch.all((ex3_sol[0] - torch.tensor([ 2.5410,  1.4131, -3.5364,  6.2737, -0.4226 ], dtype=torch.float32)) < 5e-4).item()\n",
@@ -117,33 +130,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
+    "data = torch.tensor([2.0, 3.0, 4.0, 5.0, 6.0, 7.0, 8.0, 9.0, 10.0, 11.0])\n",
+    "target = torch.tensor([2.0])\n",
+    "\n",
     "def exercise_4(data, target) -> tuple:\n",
-    "    # 1) Ensure float32 type\n",
-    "    data = data.to(torch.float32)\n",
-    "    target = target.to(torch.float32)\n",
-    "\n",
-    "    # 2) Seed once before all random inits\n",
+    "    # both gradients are tensors\n",
     "    torch.manual_seed(0)\n",
+    "    w = torch.randn(data.size(0), dtype=torch.float32, requires_grad=True)\n",
+    "    b = torch.randn(1, dtype=torch.float32, requires_grad=True)\n",
+    "    output = torch.dot(w, data) + b\n",
     "\n",
-    "    # 3) Random weight and bias with gradients enabled\n",
-    "    w = torch.randn(data.shape[0], dtype=torch.float32, requires_grad=True)  # shape: (10,)\n",
-    "    b = torch.randn(1, dtype=torch.float32, requires_grad=True)              # shape: (1,)\n",
-    "\n",
-    "    # 4) Prediction\n",
-    "    prediction = torch.dot(w, data) + b  # scalar\n",
-    "\n",
-    "    # 5) Loss = MSE (manual)\n",
-    "    loss = (prediction - target) ** 2  # scalar\n",
-    "\n",
-    "    # 6) Backpropagation\n",
+    "    loss = (output - target).pow(2).mean()\n",
     "    loss.backward()\n",
+    "    return(w.grad, b.grad)\n",
     "\n",
-    "    # 7) Return gradients\n",
-    "    return (w.grad, b.grad)\n"
+    "    # you must return in this format\n",
+    "    # return (weight_grads_tensor, bias_grads_tensor)\n",
+    "\n",
+    "ex4_sol = exercise_4(data, target)\n",
+    "assert ex4_sol[0].dim() == 1 and ex4_sol[1].dim() == 1, print(\"All tensors must have dim == 1\")\n",
+    "assert torch.all((ex4_sol[0] - torch.tensor([-85.1518, -127.7277, -170.3036, -212.8795, -255.4553, -298.0312, -340.6071, -383.1830, -425.7589, -468.3348], dtype=torch.float32)) < 5e-4)\n",
+    "assert torch.all((ex4_sol[1] - torch.tensor([-42.5759], dtype=torch.float32)) < 5e-4)"
    ]
   },
   {
@@ -183,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
