--- a/exercises.ipynb
+++ b/exercises.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -207,8 +207,7 @@
     }
    ],
    "source": [
-    "import torch\n",
-    "from torch import nn\n",
+    "\n",
     "\n",
     "def exercise_5(train_x, train_y, val_x) -> torch.Tensor:\n",
     "\n",
@@ -259,6 +258,52 @@
     "\n",
     "ex5_sol = exercise_5(train_x, train_y, val_x)\n",
     "print(ex5_sol, ex5_sol.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Looking in indexes: https://pypi.org/simple, https://download.pytorch.org/whl/cpu\n",
+      "Requirement already satisfied: torch in /home/codespace/.local/lib/python3.12/site-packages (from -r requirements.txt (line 2)) (2.7.0+cpu)\n",
+      "Requirement already satisfied: IPython in /home/codespace/.local/lib/python3.12/site-packages (from -r requirements.txt (line 3)) (9.2.0)\n",
+      "Requirement already satisfied: filelock in /home/codespace/.local/lib/python3.12/site-packages (from torch->-r requirements.txt (line 2)) (3.18.0)\n",
+      "Requirement already satisfied: typing-extensions>=4.10.0 in /home/codespace/.local/lib/python3.12/site-packages (from torch->-r requirements.txt (line 2)) (4.13.2)\n",
+      "Requirement already satisfied: setuptools in /home/codespace/.local/lib/python3.12/site-packages (from torch->-r requirements.txt (line 2)) (76.0.0)\n",
+      "Requirement already satisfied: sympy>=1.13.3 in /home/codespace/.local/lib/python3.12/site-packages (from torch->-r requirements.txt (line 2)) (1.14.0)\n",
+      "Requirement already satisfied: networkx in /home/codespace/.local/lib/python3.12/site-packages (from torch->-r requirements.txt (line 2)) (3.4.2)\n",
+      "Requirement already satisfied: jinja2 in /home/codespace/.local/lib/python3.12/site-packages (from torch->-r requirements.txt (line 2)) (3.1.6)\n",
+      "Requirement already satisfied: fsspec in /home/codespace/.local/lib/python3.12/site-packages (from torch->-r requirements.txt (line 2)) (2025.3.2)\n",
+      "Requirement already satisfied: decorator in /home/codespace/.local/lib/python3.12/site-packages (from IPython->-r requirements.txt (line 3)) (5.2.1)\n",
+      "Requirement already satisfied: ipython-pygments-lexers in /home/codespace/.local/lib/python3.12/site-packages (from IPython->-r requirements.txt (line 3)) (1.1.1)\n",
+      "Requirement already satisfied: jedi>=0.16 in /home/codespace/.local/lib/python3.12/site-packages (from IPython->-r requirements.txt (line 3)) (0.19.2)\n",
+      "Requirement already satisfied: matplotlib-inline in /home/codespace/.local/lib/python3.12/site-packages (from IPython->-r requirements.txt (line 3)) (0.1.7)\n",
+      "Requirement already satisfied: pexpect>4.3 in /home/codespace/.local/lib/python3.12/site-packages (from IPython->-r requirements.txt (line 3)) (4.9.0)\n",
+      "Requirement already satisfied: prompt_toolkit<3.1.0,>=3.0.41 in /home/codespace/.local/lib/python3.12/site-packages (from IPython->-r requirements.txt (line 3)) (3.0.51)\n",
+      "Requirement already satisfied: pygments>=2.4.0 in /home/codespace/.local/lib/python3.12/site-packages (from IPython->-r requirements.txt (line 3)) (2.19.1)\n",
+      "Requirement already satisfied: stack_data in /home/codespace/.local/lib/python3.12/site-packages (from IPython->-r requirements.txt (line 3)) (0.6.3)\n",
+      "Requirement already satisfied: traitlets>=5.13.0 in /home/codespace/.local/lib/python3.12/site-packages (from IPython->-r requirements.txt (line 3)) (5.14.3)\n",
+      "Requirement already satisfied: parso<0.9.0,>=0.8.4 in /home/codespace/.local/lib/python3.12/site-packages (from jedi>=0.16->IPython->-r requirements.txt (line 3)) (0.8.4)\n",
+      "Requirement already satisfied: ptyprocess>=0.5 in /home/codespace/.local/lib/python3.12/site-packages (from pexpect>4.3->IPython->-r requirements.txt (line 3)) (0.7.0)\n",
+      "Requirement already satisfied: wcwidth in /home/codespace/.local/lib/python3.12/site-packages (from prompt_toolkit<3.1.0,>=3.0.41->IPython->-r requirements.txt (line 3)) (0.2.13)\n",
+      "Requirement already satisfied: mpmath<1.4,>=1.1.0 in /home/codespace/.local/lib/python3.12/site-packages (from sympy>=1.13.3->torch->-r requirements.txt (line 2)) (1.3.0)\n",
+      "Requirement already satisfied: MarkupSafe>=2.0 in /home/codespace/.local/lib/python3.12/site-packages (from jinja2->torch->-r requirements.txt (line 2)) (3.0.2)\n",
+      "Requirement already satisfied: executing>=1.2.0 in /home/codespace/.local/lib/python3.12/site-packages (from stack_data->IPython->-r requirements.txt (line 3)) (2.2.0)\n",
+      "Requirement already satisfied: asttokens>=2.1.0 in /home/codespace/.local/lib/python3.12/site-packages (from stack_data->IPython->-r requirements.txt (line 3)) (3.0.0)\n",
+      "Requirement already satisfied: pure-eval in /home/codespace/.local/lib/python3.12/site-packages (from stack_data->IPython->-r requirements.txt (line 3)) (0.2.3)\n",
+      "\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m25.0.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m25.1.1\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpython3 -m pip install --upgrade pip\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install -r requirements.txt\n"
    ]
   }
  ],
